--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "github-markdown-css": "^4.0.0",
     "highlight.js": "^10.0.2",
     "hotkeys-js": "^3.7.3",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
@@ -64,6 +65,7 @@
     "babel-plugin-import": "^1.13.0",
     "compression-webpack-plugin": "^3.0.1",
     "cz-conventional-changelog": "^3.2.0",
+    "echarts": "^5.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
