--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "core-js": "^3.4.3",
     "countup.js": "^2.0.4",
     "dayjs": "^1.8.17",
+    "echarts": "^4.6.0",
+    "echarts-liquidfill": "^2.0.2",
     "element-ui": "^2.13.2",
     "faker": "^4.1.0",
     "flex.css": "^1.1.7",
     "fuse.js": "^5.2.3",
     "github-markdown-css": "^4.0.0",
+    "highcharts": "^8.2.2",
     "highlight.js": "^10.0.2",
     "hotkeys-js": "^3.7.3",
-    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
@@ -39,6 +41,7 @@
     "simplemde": "^1.11.2",
     "sortablejs": "^1.10.1",
     "ua-parser-js": "^0.7.20",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.11",
     "vue-grid-layout": "^2.3.7",
     "vue-i18n": "^8.15.1",
@@ -65,18 +68,15 @@
     "babel-plugin-import": "^1.13.0",
     "compression-webpack-plugin": "^3.0.1",
     "cz-conventional-changelog": "^3.2.0",
-    "echarts": "^5.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.2.2",
-    "node-sass": "^4.14.1",
     "sass": "^1.23.7",
+    "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
-    "scss": "^0.2.4",
-    "scss-loader": "0.0.1",
     "svg-sprite-loader": "^4.1.6",
     "text-loader": "^0.0.1",
     "vue-cli-plugin-i18n": "^1.0.1",
