--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fuse.js": "^5.2.3",
     "github-markdown-css": "^4.0.0",
     "highcharts": "^8.2.2",
+    "highcharts-vue": "^1.3.5",
     "highlight.js": "^10.0.2",
     "hotkeys-js": "^3.7.3",
     "js-cookie": "^2.2.1",
@@ -40,6 +41,7 @@
     "screenfull": "^5.0.2",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.10.1",
+    "swiper": "^5.3.1",
     "ua-parser-js": "^0.7.20",
     "v-charts": "^1.19.0",
     "vue": "^2.6.11",
@@ -49,6 +51,7 @@
     "vue-router": "^3.1.3",
     "vue-splitpane": "^1.0.6",
     "vue-ueditor-wrap": "^2.4.1",
+    "vue-video-player": "^5.0.2",
     "vuex": "^3.1.2",
     "vxe-table": "^3.0.9",
     "xe-utils": "^3.0.4"
