--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@
 # 页面 title 前缀
 VUE_APP_TITLE=ypAdmin
 
-# 网络请求公用地址
-VUE_APP_API=/api/
+# 网络请求公用地址(context-path)
+VUE_APP_API=/
 
 # 国际化配置
 VUE_APP_I18N_LOCALE=zh-chs
@@ -12,3 +12,6 @@ VUE_APP_I18N_FALLBACK_LOCALE=en
 
 # element 颜色
 VUE_APP_ELEMENT_COLOR=#409EFF
+
+# 是否连接后台 1是0否
+VUE_APP_SERVER=1
