--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@d2-projects/vue-table-export": "^1.1.2",
     "@d2-projects/vue-table-import": "^1.0.1",
-    "axios": "^0.19.0",
+    "@riophae/vue-treeselect": "0.4.0",
+    "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.1",
     "better-scroll": "^1.15.2",
     "clipboard-polyfill": "^2.8.6",
@@ -31,7 +32,9 @@
     "highcharts-vue": "^1.3.5",
     "highlight.js": "^10.0.2",
     "hotkeys-js": "^3.7.3",
+    "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
+    "jsencrypt": "^3.0.0-rc.1",
     "lodash": "^4.17.20",
     "lowdb": "^1.0.0",
     "marked": "^1.0.0",
@@ -93,7 +96,6 @@
     }
   },
   "repository": {
-    "type": "git",
-    "url": "https://github.com/d2-projects/d2-admin.git"
+    
   }
 }
